# botbalance

./: .dockerignore  .gitignore  .gitleaks.toml  ENABLE_CI_FEATURES.md  Makefile  PROD_FIXES.md  README.md  docker-compose.yml  env.example  pre-commit-check.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-backend.yml  deploy-frontend.yml  security.yml
backend/: Dockerfile  beat_entrypoint.py  check_django_apps.py  manage.py  pyproject.toml  pytest.ini  worker_entrypoint.py
backend/.cursor/rules/: agent-backend-rules.mdc
backend/app/: celery.py  urls.py
backend/app/api/: serializers.py  urls.py  views.py
backend/app/settings/: base.py  local.py  prod.py
backend/app/tasks/: tasks.py
backend/botbalance/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
backend/botbalance/api/: apps.py  serializers.py  test_balances.py  test_portfolio.py  urls.py  views.py
backend/botbalance/core/: apps.py
backend/botbalance/core/management/commands/: backfill_snapshots.py  create_or_update_superuser.py
backend/botbalance/exchanges/: adapters.py  admin.py  apps.py  binance_adapter.py  exceptions.py  factory.py  models.py  normalization.py  okx_adapter.py  portfolio_service.py  price_service.py  snapshot_service.py  test_adapters.py
backend/botbalance/exchanges/migrations/: 0001_initial.py  0002_portfoliosnapshot.py  0003_add_passphrase_field.py  0004_add_portfolio_state.py  0005_exchangeaccount_last_error_at_and_more.py
backend/botbalance/settings/: base.py  local.py  migrate.py  prod.py
backend/botbalance/tasks/: apps.py  tasks.py
backend/static/: .gitkeep
backend/strategies/: admin.py  constants.py  models.py  rebalance_service.py  serializers.py  tests.py  urls.py  views.py
backend/strategies/management/commands/: backfill_open_order_fills.py
backend/strategies/migrations/: 0001_initial.py  0002_add_order_step_pct.py  0003_order.py  0004_switch_cancel_buffer_pct.py  0005_alter_strategy_switch_cancel_buffer_pct.py  0006_update_strategy_fields.py  0007_populate_strategy_exchange_accounts.py  0008_make_exchange_account_required.py  0009_add_min_delta_pct.py  0010_set_min_delta_pct_default.py  0011_remove_min_delta_quote.py  0012_add_auto_trade_enabled.py  0013_update_order_size_min_validation.py
backend/tests/: conftest.py  test_api.py  test_auth.py  test_orders.py  test_tasks.py  testnet_smoke_live_test.py
docs/: 1_Idea.md  ADAPTATION_GUIDE.md  CICD_CUSTOMIZATION.md  GCP_DEPLOYMENT.md  GITHUB_DEPLOYMENT_SETUP.md  QUICK_SETUP.md  SECURITY_CHECKLIST.md  before_commit.md  boilerplate-description.md  boilerplate-tasks.md  bot_architecture.md  exchange_adapter.md  exchange_order_cancellation.md  frontend_mvp.md  portfolio_state_architecture.md  roadmap_mvp.md  step4_switch_cancel_buffer.md  step5_order_tracking.md  step6_auto_rebalance.md  testnet_integration.md  testnet_smoke.md
docs/boilerplate/: README.md  customization.md  deployment.md  quick-start.md  reference.md
docs/infra/: infrastructure-description.md  infrastructure-tasks.md
docs/iterations/: checklists.md
frontend/: .env.production  .gitignore  .prettierignore  .prettierrc  README.md  env.example  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/e2e/: smoke.spec.ts
frontend/playwright-report/: index.html
frontend/src/: App.css  index.css
ops/: http-redirect-config.yaml  init-db.sql  urlmap-config.yaml
(+75 files in other folders)
